[package]
name = "eth"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
colored = "2.0.0"
clap = { version = "3.1.25", features = ["derive"] }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }